Fix overflow input issue

--- a/style.css
+++ b/style.css
@@ -116,4 +116,5 @@ table.message {
     font-size: 100%;
     width: 100%;
     padding: 1em;
-    margin: 0; }
+    margin: 0;
+    box-sizing: border-box; }
